--- a/css/menikah.css
+++ b/css/menikah.css
@@ -41,7 +41,7 @@ html {
   /* background-image: url(https://picsum.photos/id/25/1920/1080); */
   /* background-size:contain;
   background-position:center; */
-  background: linear-gradient(rgba(153, 110, 109, 0.65), rgba(153, 110, 109, 0.65)), rgba(0, 0, 0, 0.55) url("/image/image825.png") no-repeat center;
+  background: linear-gradient(rgba(153, 110, 109, 0.65), rgba(153, 110, 109, 0.65)), rgba(0, 0, 0, 0.55) url("/wedding-invite/image/image825.png") no-repeat center;
   background-attachment: fixed;
   background-size: cover;
   color: white;
@@ -424,6 +424,7 @@ vertical-align: middle;
 
 #toTop a {
   color: white;
+
 }
 
 #toTop:hover {
