--- a/css/menikah.css
+++ b/css/menikah.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Lato|Raleway|Rouge+Script");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@300&display=swap');
 .has-vertically-aligned-content {
   display: flex;
   flex-direction: column;
@@ -38,10 +39,8 @@ html {
 
 
 .hero {
-  /* background-image: url(https://picsum.photos/id/25/1920/1080); */
-  /* background-size:contain;
-  background-position:center; */
-  background: linear-gradient(rgba(153, 110, 109, 0.65), rgba(153, 110, 109, 0.65)), rgba(0, 0, 0, 0.55) url("/wedding-invite/image/image825.png") no-repeat center;
+  /* background-image: url("/image/jumbotron-high.jpg"); */
+  background: linear-gradient(rgba(153, 110, 109, 0.65), rgba(153, 110, 109, 0.65)), rgba(0, 0, 0, 0.55) url("/wedding-invite/image/jumbotron-high.jpg") no-repeat center;
   background-attachment: fixed;
   background-size: cover;
   color: white;
@@ -127,7 +126,7 @@ html {
 }
 
 .main-content {
-  padding-top: 2rem;
+  /* padding-top: 2rem; */
   color: #000; 
   font-family: 'Raleway', sans-serif;
 }
@@ -182,8 +181,8 @@ html {
 }
 
 @media (min-width: 769px){
-  .hero.is-large .hero-body{
-    padding: 10rem 0 ;
+  .hero .is-largest .hero-body{
+    padding: 6rem 0 ;
   }
 }
 
@@ -324,7 +323,29 @@ vertical-align: middle;
 }
 
 .bodytext {
-  font-size: 18px;
+  z-index: -1;
+  color: white;
+  border-radius: 25px;
+  background-color: #BC8887;
+  text-align: left;
+  font-family: 'Noto Sans Bengali', sans-serif;
+  font-size: 1.5rem;
+  padding: 5%;
+  max-width: 768px;
+  margin: 0 auto;
+}
+
+/* .bodytext-right {
+  display:inherit;
+  position: relative;
+  right: 0 ;
+} */
+
+@media (max-width: 425px) {
+  .bodytext {
+    font-size: 1.1rem;
+    /* padding: 3rem 7vw; */
+  }
 }
 
 .waktu {
@@ -398,9 +419,11 @@ vertical-align: middle;
 }
 
 .bismillah {
-  margin: 25px;
+  /* margin: 1rem; */
+  position: relative;
+  bottom: -50px;
   display: inline-block;
-  max-height: 50px;
+  max-height: 180px;
   vertical-align: middle;
 }
 
@@ -422,7 +445,7 @@ vertical-align: middle;
   box-shadow: 0 5px 20px rgba(14, 25, 80, 0.3);
 }
 
-#toTop a {
+#toTop img {
   color: white;
 
 }
