--- a/css/menikah.css
+++ b/css/menikah.css
@@ -40,7 +40,7 @@ html {
 
 .hero {
   /* background-image: url("/image/jumbotron-high.jpg"); */
-  background: linear-gradient(rgba(153, 110, 109, 0.65), rgba(153, 110, 109, 0.65)), rgba(0, 0, 0, 0.55) url("/image/jumbotron-high.jpg") no-repeat center;
+  background: linear-gradient(rgba(153, 110, 109, 0.65), rgba(153, 110, 109, 0.65)), rgba(0, 0, 0, 0.55) url("https://i.ibb.co/r3m46h5/Snapseed.jpg") no-repeat center;
   background-attachment: fixed;
   background-size: cover;
   color: white;
