--- a/css/menikah.css
+++ b/css/menikah.css
@@ -1,5 +1,14 @@
 @import url("https://fonts.googleapis.com/css?family=Lato|Raleway|Rouge+Script");
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@300&display=swap');
+
+.bangla {
+  font-family: 'Noto Sans Bengali', sans-serif;
+}
+
+.column {
+  padding: 0.75rem 0;
+}
+
 .has-vertically-aligned-content {
   display: flex;
   flex-direction: column;
@@ -40,7 +49,7 @@ html {
 
 .hero {
   /* background-image: url("/image/jumbotron-high.jpg"); */
-  background: linear-gradient(rgba(153, 110, 109, 0.65), rgba(153, 110, 109, 0.65)), rgba(0, 0, 0, 0.55) url("https://i.ibb.co/r3m46h5/Snapseed.jpg") no-repeat center;
+  background: linear-gradient(rgba(153, 110, 109, 0.65), rgba(153, 110, 109, 0.65)), rgba(0, 0, 0, 0.55) url("https://i.ibb.co/km6DKTn/jumbo2.jpg") no-repeat center;
   background-attachment: fixed;
   background-size: cover;
   color: white;
@@ -322,6 +331,23 @@ display: inline-block;
 vertical-align: middle;
 }
 
+#translate {
+
+  position: absolute;
+  top: 4%;
+  right: 5%; 
+  padding: 10px auto;
+  max-width: 160px;
+  margin: 0 auto;
+  border: none;
+  outline: none;
+  background: none;
+  color: white;
+  cursor: pointer;
+  border-radius: 10px;
+  font-size: 32px;
+}
+
 .bodytext {
   z-index: -1;
   color: white;
@@ -335,17 +361,15 @@ vertical-align: middle;
   margin: 0 auto;
 }
 
-/* .bodytext-right {
-  display:inherit;
-  position: relative;
-  right: 0 ;
-} */
-
 @media (max-width: 425px) {
   .bodytext {
     margin: 5px;
     font-size: 1.1rem;
     /* padding: 3rem 7vw; */
+  }
+  #translate {
+    top: 3%;
+    font-size: 6vw;
   }
 }
 
@@ -354,26 +378,32 @@ vertical-align: middle;
   font-family: 'Raleway', sans-serif;
 }
 
+.tanggal-hari {
+  font-weight: 600;
+}
+
 .tanggal-angka {
-  font-size: 4rem;
+  font-size: 2rem;
   font-family: 'Raleway', sans-serif;
-  font-weight: 900;
+  font-weight: 600;
   line-height: 1;
 }
 
 .tanggal-aoka {
-  font-size: 3rem;
+  margin: 1rem 0;
+  font-size: 2.5rem;
   font-family: 'Raleway', sans-serif;
   font-weight: 900;
   line-height: 1;
 }
 
-
+.tanggal-bangla {
+  margin-top: 15px;
+}
 
 .tempat {
   font-size: 1.4rem;
   font-family: 'Raleway', sans-serif;
-  font-size: ;
   margin-bottom: 50px;
 }
 
@@ -437,14 +467,16 @@ vertical-align: middle;
   vertical-align: middle;
 }
 
+
+
 #toTop {
   
   height: 50px;
   width: 50px;
   display: none;
   position: fixed;
-  bottom: 20px;
-  right: 20px;
+  bottom: 25px;
+  right: 25px;
   z-index: 99;
   border: none;
   outline: none;
@@ -598,9 +630,137 @@ body.preloader-site {
 .dusty-pink-darkest {color: #996E6D}
 
 .tile {
-  border-radius: 10px;
+  /* margin-top: 20px; */
+  border-radius: 15px;
 }
 
+/* Slider is Back */
+.slider-ctr {
+  width: 700px;
+  height: 440px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -220px;
+  margin-left: -350px;
+  box-sizing: border-box;
+  border: 10px solid white;
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0 10px 15px 3px rgba(0, 0, 0, 0.15), 0 5px 20px 3px rgba(0, 0, 0, 0.1);
+}
+.slider-ctr:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(to bottom, transparent 70%, rgba(0, 0, 0, 0.6) 100%);
+  background: -webkit-linear-gradient(to bottom, transparent 70%, rgba(0, 0, 0, 0.6) 100%);
+  pointer-events: none;
+  z-index: 9;
+}
+
+.slider-control {
+  display: flex;
+  position: absolute;
+  right: 30px;
+  bottom: 30px;
+  width: 80px;
+  overflow: hidden;
+  border-radius: 3px;
+  box-shadow: 0 3px 3px 3px rgba(0, 0, 0, 0.15);
+  z-index: 99;
+}
+.slider-control .control {
+  width: 50%;
+  height: 40px;
+  display: block;
+  float: left;
+  text-align: center;
+  line-height: 40px;
+  cursor: pointer;
+  transition: 0.3s all ease;
+  background: white;
+}
+.slider-control .control .icon {
+  pointer-events: none;
+  transition: 0.3s all ease;
+}
+.slider-control .control.disabled {
+  pointer-events: none;
+  background: #ddd;
+}
+.slider-control .control.disabled .icon {
+  opacity: 0.5;
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transition: 0.45s all cubic-bezier(0.65, 0.05, 0.36, 1);
+  -webkit-clip-path: inset(0 0 0 0);
+  clip-path: inset(0 0 0 0);
+}
+.slide:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.125);
+}
+.slide.slide-on {
+  -webkit-clip-path: inset(0 100% 0 0);
+  clip-path: inset(0 100% 0 0);
+}
+.slide.text-on .title {
+  transition: 0.3s all cubic-bezier(0.65, 0.05, 0.36, 1) 0.45s;
+  -webkit-clip-path: inset(0 0 0 0);
+  clip-path: inset(0 0 0 0);
+}
+.slide.text-on .author {
+  transition: 0.3s all cubic-bezier(0.65, 0.05, 0.36, 1) 0.6s;
+  -webkit-clip-path: inset(0 0 0 0);
+  clip-path: inset(0 0 0 0);
+}
+.slide img {
+  display: block;
+}
+.slide figcaption {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+}
+.slide .title {
+  font-size: 50px;
+  margin-bottom: 2px;
+  color: white;
+  transition: 0.3s all cubic-bezier(0.65, 0.05, 0.36, 1) 0.45s;
+  -webkit-clip-path: inset(0 0 0 100%);
+  clip-path: inset(0 0 0 100%);
+  font-weight: 400;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+  position: relative;
+}
+.slide .author {
+  font-size: 16px;
+  color: white;
+  opacity: 0.8;
+  transition: 0.3s all cubic-bezier(0.65, 0.05, 0.36, 1) 0.45s;
+  -webkit-clip-path: inset(0 0 0 100%);
+  clip-path: inset(0 0 0 100%);
+  font-weight: 300;
+  letter-spacing: 3px;
+  position: relative;
+  z-index: 9;
+}
 
 .foto1 {
   background-image: linear-gradient(rgba(95, 2, 2, 0.5), rgba(48, 47, 47, 0.9)), url("../image/sherly-daeng-kang-emil.jpg");
