--- a/css/menikah.css
+++ b/css/menikah.css
@@ -9,6 +9,14 @@
   padding: 0.75rem 0;
 }
 
+.jumbo-view{
+  margin: 0 auto;
+  height: 350px;
+  width: auto;
+}
+
+
+
 .has-vertically-aligned-content {
   display: flex;
   flex-direction: column;
@@ -48,13 +56,20 @@ html {
 
 
 .hero {
-  /* background-image: url("/image/jumbotron-high.jpg"); */
-  background: linear-gradient(rgba(153, 110, 109, 0.65), rgba(153, 110, 109, 0.65)), rgba(0, 0, 0, 0.55) url("https://i.ibb.co/km6DKTn/jumbo2.jpg") no-repeat center;
+  background: linear-gradient(rgba(153, 110, 109, 0), rgba(153, 110, 109, 0.649)), rgba(0, 0, 0, 0.55)url("https://i.ibb.co/tm2393R/jumbo3.png") no-repeat center;
   background-attachment: fixed;
   background-size: cover;
-  color: white;
+  color: whitesmoke;
   box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   font-family: 'Raleway', sans-serif;
+}
+
+@media (max-width: 599px){
+  .hero{
+    background: linear-gradient(rgba(153, 110, 109, 0), rgba(153, 110, 109, 0.74)), rgba(0, 0, 0, 0.55) url("https://i.ibb.co/N1ykS01/jumbo4.png") no-repeat center;
+    background-attachment: fixed;
+    background-size: cover;
+  }
 }
 
 
@@ -69,9 +84,10 @@ html {
 }
 
 .hero .subtitle {
+  -webkit-text-stroke: 0.1px white;
   padding: 35px;
   color: whitesmoke;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
 }
 
 .hero .tempatwaktu {
@@ -364,7 +380,7 @@ vertical-align: middle;
 @media (max-width: 425px) {
   .bodytext {
     margin: 5px;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     /* padding: 3rem 7vw; */
   }
   #translate {
